--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org" lang="en">
+
+<html xmlns:th="http://thymeleaf.org" >
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
     <title>Mars Rover API App</title>
 </head>
 <body>
 <h1>Welcome to the Mars Rover API Web App</h1>
 
-    <div th:text="${'Hi there'}">
+    <div th:text="${'Hi there '+ name}">
     </div>
 </body>
 </html>
